--- a/WebSpa07/nbproject/project.properties
+++ b/WebSpa07/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=WebSpa07
+application.vendor=masoud
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,24 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/WebSpa07.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.apache-commons-codec-1.3.jar.zip=/home/masoud/Downloads/apache-commons-codec-1.3.jar.zip
+file.reference.apache-commons-codec-1.4.jar.zip=/home/masoud/Downloads/apache-commons-codec-1.4.jar.zip
+file.reference.common-lang3.jar=/home/masoud/Downloads/common-lang3.jar
+file.reference.commons-codec-1.7.jar=/home/masoud/Downloads/commons-codec-1.7.jar
+file.reference.commons-io-2.4.jar=/home/masoud/Downloads/commons-io-2.4.jar
+file.reference.org.apache.commons.io.jar=/home/masoud/Downloads/org.apache.commons.io.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.apache-commons-codec-1.4.jar.zip}:\
+    ${file.reference.org.apache.commons.io.jar}:\
+    ${file.reference.apache-commons-codec-1.3.jar.zip}:\
+    ${file.reference.commons-codec-1.7.jar}:\
+    ${file.reference.common-lang3.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
