--- a/WebSpa07/nbproject/project.properties
+++ b/WebSpa07/nbproject/project.properties
@@ -1,89 +1,68 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=WebSpa07
-application.vendor=masoud
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/WebSpa07.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+#Wed Aug 30 12:11:12 MDT 2017
 excludes=
-file.reference.apache-commons-codec-1.3.jar.zip=/home/masoud/Downloads/apache-commons-codec-1.3.jar.zip
-file.reference.apache-commons-codec-1.4.jar.zip=/home/masoud/Downloads/apache-commons-codec-1.4.jar.zip
-file.reference.common-lang3.jar=/home/masoud/Downloads/common-lang3.jar
-file.reference.commons-codec-1.7.jar=/home/masoud/Downloads/commons-codec-1.7.jar
-file.reference.commons-io-2.4.jar=/home/masoud/Downloads/commons-io-2.4.jar
-file.reference.org.apache.commons.io.jar=/home/masoud/Downloads/org.apache.commons.io.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.apache-commons-codec-1.4.jar.zip}:\
-    ${file.reference.org.apache.commons.io.jar}:\
-    ${file.reference.apache-commons-codec-1.3.jar.zip}:\
-    ${file.reference.commons-codec-1.7.jar}:\
-    ${file.reference.common-lang3.jar}:\
-    ${file.reference.commons-io-2.4.jar}:\
-    ${libs.junit_4.classpath}
-# Space-separated list of extra javac options
-javac.compilerargs=
 javac.deprecation=false
+build.test.results.dir=${build.dir}/test/results
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.nonavbar=false
 javac.external.vm=true
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+file.reference.org.apache.commons.io.jar=/home/masoud/Downloads/org.apache.commons.io.jar
+javac.processorpath=${javac.classpath}
 javac.target=1.8
+file.reference.commons-io-2.4.jar=/home/masoud/Downloads/commons-io-2.4.jar
+annotation.processing.processors.list=
+javadoc.noindex=false
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=test
+file.reference.apache-commons-codec-1.3.jar.zip=/home/masoud/Downloads/apache-commons-codec-1.3.jar.zip
+build.dir=build
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=
+main.class=
+file.reference.commons-codec-1.7.jar=/home/masoud/Downloads/commons-codec-1.7.jar
+dist.jar=${dist.dir}/WebSpa07.jar
+javac.test.processorpath=${javac.test.classpath}
+javadoc.use=true
+dist.archive.excludes=
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
+javac.source=1.8
+application.vendor=masoud
+junit.selected.version=4
+debug.classpath=${run.classpath}
+run.jvmargs=
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
+jar.compress=false
 javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
+file.reference.common-lang3.jar=/home/masoud/Downloads/common-lang3.jar
+annotation.processing.run.all.processors=true
+application.title=WebSpa07
+meta.inf.dir=${src.dir}/META-INF
+manifest.file=manifest.mf
+file.reference.apache-commons-codec-1.4.jar.zip=/home/masoud/Downloads/apache-commons-codec-1.4.jar.zip
+annotation.processing.enabled=true
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=src
+mkdist.disabled=false
+endorsed.classpath=
+javac.classpath=${file.reference.apache-commons-codec-1.4.jar.zip}\:${file.reference.org.apache.commons.io.jar}\:${file.reference.apache-commons-codec-1.3.jar.zip}\:${file.reference.commons-codec-1.7.jar}\:${file.reference.common-lang3.jar}\:${file.reference.commons-io-2.4.jar}\:${libs.junit_4.classpath}
+annotation.processing.enabled.in.editor=false
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+javadoc.notree=false
